--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
-	background: #cce0e7;
+	background: #e7d5d5;
 }
 
 main {
@@ -18,6 +18,7 @@ main {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 20px;
+	
 }
 
 .formulario__label {
@@ -25,6 +26,7 @@ main {
 	font-weight: 700;
 	padding: 10px;
 	cursor: pointer;
+	
 }
 
 .formulario__grupo-input {
@@ -96,7 +98,7 @@ main {
 .formulario__mensaje {
 	height: 45px;
 	line-height: 45px;
-	background: #F66060;
+	background:#05ff69;
 	padding: 0 15px;
 	border-radius: 3px;
 	display: none;
@@ -127,7 +129,9 @@ main {
 	border-radius: 3px;
 	cursor: pointer;
 	transition: .1s ease all;
+	
 }
+
 
 .formulario__btn:hover {
 	box-shadow: 3px 0px 30px rgba(163,163,163, 1);
@@ -135,7 +139,7 @@ main {
 
 .formulario__mensaje-exito {
 	font-size: 14px;
-	color: #fb0896;
+	color: #10eb08;
 	display: none;
 }
 
@@ -145,21 +149,22 @@ main {
 
 /* ----- -----  Estilos para Validacion ----- ----- */
 .formulario__grupo-correcto .formulario__validacion-estado {
-	color: #1a49f1;
+	color: #15ef09;
 	opacity: 1;
+	
 }
 
 .formulario__grupo-incorrecto .formulario__label {
-	color: #000000;
+	color:#ff0505;
 }
 
 .formulario__grupo-incorrecto .formulario__validacion-estado {
-	color: #2d0520;
+	color: #ff0505;
 	opacity: 1;
 }
 
 .formulario__grupo-incorrecto .formulario__input {
-	border: 3px solid #2d0520;
+	border: 3px solid #ff0505;
 }
 
 
@@ -179,3 +184,5 @@ main {
 		width: 100%;
 	}
 }
+
+
