--- a/css/css.css
+++ b/css/css.css
@@ -1,10 +1,10 @@
 * {
 	box-sizing: border-box;
-}
+}	
 
 body {
 	font-family: 'Roboto', sans-serif;
-	background: #e7d5d5;
+	background: #eee7e7;
 }
 
 main {
@@ -61,7 +61,7 @@ main {
 }
 
 .formulario__input:focus {
-	border: 3px solid #0075FF;
+	border: 3px solid #149d9f;
 	outline: none;
 	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
 }
@@ -98,7 +98,7 @@ main {
 .formulario__mensaje {
 	height: 45px;
 	line-height: 45px;
-	background:#05ff69;
+	background:#a738c3;
 	padding: 0 15px;
 	border-radius: 3px;
 	display: none;
@@ -122,7 +122,7 @@ main {
 	height: 45px;
 	line-height: 45px;
 	width: 30%;
-	background: #000;
+	background: #5057de;
 	color: #fff;
 	font-weight: bold;
 	border: none;
